--- a/OpenedX_and_IM.slides.html
+++ b/OpenedX_and_IM.slides.html
@@ -16,7 +16,7 @@
 
 <!-- General and theme style sheets -->
 <link rel="stylesheet" href="http://cdn.bootcss.com/reveal.js/3.3.0/css/reveal.css">
-<link rel="stylesheet" href="http://cdn.bootcss.com/reveal.js/3.3.0/css/theme/simple.css" id="theme">
+<link rel="stylesheet" href="http://cdn.bootcss.com/reveal.js/3.3.0/css/theme/sky.css" id="theme">
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -335,6 +335,27 @@ a.anchor-link {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#38899;&#39057;&#21644;&#25991;&#20214;">&#38899;&#39057;&#21644;&#25991;&#20214;<a class="anchor-link" href="#&#38899;&#39057;&#21644;&#25991;&#20214;">&#182;</a></h3><p><img src="https://leanote.com/api/file/getImage?fileId=5788ac74ab644135ea00ffb9" alt="demo2"></p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001e" alt=""></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><img src="https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001d" style="float:left" /></p>
+<p><img src="https://leanote.com/api/file/getImage?fileId=5788b116ab644135ea01001c" alt=""></p>
 
 </div>
 </div>
